# Ascent

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES
.github/workflows/: release.yml
src/: iced_ui.rs  main.rs  pages.rs  ui.rs  vault.rs
src/container/: app.rs  signal.rs
src/iced_ui/: pages.rs  state.rs  ui.rs
src/iced_ui/pages/: application_errors_page.rs  confirm_import_page.rs  confirm_legacy_import_page.rs  filter_ui.rs  help_page.rs  settings_page.rs  tag_registry_page.rs  transaction_management_pages.rs  transactions_page.rs  trends_page.rs
src/iced_ui/state/: app.rs  signal.rs
src/iced_ui/ui/: components.rs
src/pages/: application_errors_page.rs  confirm_import_page.rs  confirm_legacy_import_page.rs  confirm_load_legacy_page.rs  edit_transaction_page.rs  filter_ui.rs  help_page.rs  settings_page.rs  tag_registry_page.rs  transaction_management_pages.rs  transactions_page.rs  trends_page.rs
src/ui/: charting.rs  components.rs  material.rs  palette.rs
src/vault/: bank.rs  filter.rs  parse.rs  result.rs  result_stack.rs  ring_parse.rs  save_engine.rs  schrod.rs  teller.rs  transaction.rs  trend_parse.rs  trend_setter.rs
