[package]
name = "Ascent"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
name = "Ascent"
identifier = "com.donnovinwiebe.ascent"
icon = ["assets/icon.icns"]
version = "0.1.0"
copyright = "Copyright (c) 2026 Donnovin Wiebe"
category = "public.app-category.finance"
short_description = "Personal finance and transaction tracking"
osx_minimum_system_version = "11.0"

[dependencies]
iced = { version = "0.14.0", features = ["advanced", "canvas", "image"] }
rusty-money = "0.5.0"
tokio = "1.53.1"
rust_decimal = "1.42"
rust_decimal_macros = "1.40"
iced_font_awesome = "0.4.2"
rand = "0.10.2"
tiny-skia = "0.12.0"
rayon = "1.12.0"
serde_json = "1.0.151"
serde = "1.0.229"
rfd = "0.17.2"
chrono = "0.4.45"
plotters = { version = "0.3", default-features = false, features = ["line_series", "ttf"] }
plotters-bitmap = "0.3.7"
materialui = { version = "3.0.0", features = ["plotters"] }
schrod = "1.0.0"
